adapter/internal/operator/gateway-api/testdata/securitypolicy-status-conditions.in.yaml
securityPolicies:
- apiVersion: apk.wso2.com/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: envoy-gateway
    name: target-gateway-1
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
      namespace: envoy-gateway
- apiVersion: apk.wso2.com/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: envoy-gateway
    name: target-gateway-1-as-well
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
      namespace: envoy-gateway
- apiVersion: apk.wso2.com/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: envoy-gateway
    name: target-httproute-in-gateway-1
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-1
      namespace: envoy-gateway
- apiVersion: apk.wso2.com/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: envoy-gateway
    name: also-target-httproute-in-gateway-1
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-1
      namespace: envoy-gateway
- apiVersion: apk.wso2.com/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: envoy-gateway
    name: target-grpcroute-in-gateway-2
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: GRPCRoute
      name: grpcroute-1
      namespace: envoy-gateway
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: HTTPRoute
  metadata:
    namespace: envoy-gateway
    name: httproute-1
  spec:
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
    rules:
    - matches:
      - path:
          value: "/"
      backendRefs:
      - name: service-1
        port: 8080
grpcRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: GRPCRoute
  metadata:
    namespace: envoy-gateway
    name: grpcroute-1
  spec:
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-2
    rules:
    - matches:
      - headers:
        - type: Exact
          name: magic
          value: foo
      backendRefs:
      - name: service-1
        port: 8080
gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-2
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
    - name: tcp
      protocol: TCP
      port: 53
      allowedRoutes:
        namespaces:
          from: Same
